FixedStretchedActorImages

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@
   height: 100px;
   background-position: center center;
   background-size: cover;
+  object-fit: cover;
 }
 
 .bookFiller {
